flux/apps/_bases/dieppe/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: dieppe

spec:
  selector:
    app: dieppe
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
